syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "ShipmentReceiptProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// flat-ent: Shipment Receipt
message ShipmentReceiptFlatData {
    option (routines.entity_type) = "ShipmentReceipt";
    option (routines.keys).keys = "receipt_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: receiptId
    string receipt_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string inventory_item_id = 2 [(routines.opts).field_type = "id"];
    string product_id = 3 [(routines.opts).field_type = "id"];
    string shipment_id = 4 [(routines.opts).field_type = "id"];
    string shipment_item_seq_id = 5 [(routines.opts).field_type = "id"];
    string shipment_package_seq_id = 6 [(routines.opts).field_type = "id"];
    string order_id = 7 [(routines.opts).field_type = "id"];
    string order_item_seq_id = 8 [(routines.opts).field_type = "id"];
    string return_id = 9 [(routines.opts).field_type = "id"];
    string return_item_seq_id = 10 [(routines.opts).field_type = "id"];
    string rejection_id = 11 [(routines.opts).field_type = "id"];
    string received_by_user_login_id = 12 [(routines.opts).field_type = "id-vlong"];
    google.protobuf.Timestamp datetime_received = 13 [(routines.opts).field_type = "date-time"];
    string item_description = 14 [(routines.opts).field_type = "description"];
    routines.FixedPoint quantity_accepted = 15 [(routines.opts).field_type = "fixed-point"];
    routines.FixedPoint quantity_rejected = 16 [(routines.opts).field_type = "fixed-point"];
    google.protobuf.Timestamp last_updated_tx_stamp = 17 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 18 [(routines.opts).field_type = "date-time"];
    string tenant_id = 19 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 36;
    map<string, google.protobuf.Any> attachments = 37 ;
}

message ShipmentReceiptKey{
    string receipt_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message ShipmentReceiptList{
    repeated ShipmentReceiptFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListShipmentReceipts` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

